<resources>

    <string name="app_name">180 Degree</string>
    <!--login layout-->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="url">http://lovinmybag.beetleware.com/api/auth</string>
    <string name="url_sold_items">http://lovinmybag.beetleware.com/api/sold-items</string>
    <string name="url_products">http://lovinmybag.beetleware.com/api/products</string>
    <string name="url_profile">http://lovinmybag.beetleware.com/api/profile-show</string>
    <!--home layout-->
    <string name="home">Home</string>
    <string name="home_add_item">Add New Item</string>
    <string name="home_search_item">Search Items</string>
    <string name="home_sold_item">Sold Items</string>
    <string name="home_products">Products</string>

    <!--profile layout-->
    <string name="profile">Profile</string>
    <string name="customer">Customer</string>
    <string name="sales">Sales</string>
    <string name="offer">Offer</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

</resources>