<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--background logo-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_background_height"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/splash" />

        <!--login form-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/login_form_top_margin"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:outlineProvider="background">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    app:tint="@color/colorPrimary">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="top"
                        android:layout_marginHorizontal="20dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/triangle"
                        android:cropToPadding="true"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center"
                        android:text="@string/login"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/white" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/hr_margin"
                    android:layout_marginVertical="@dimen/vr_margin"
                    android:background="@drawable/boarder_radius2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/ic_user" />

                    <EditText
                        style="@style/input"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/user_name"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/hr_margin"
                    android:layout_marginVertical="@dimen/vr_margin"
                    android:background="@drawable/boarder_radius2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/ic_paasword" />

                    <EditText
                        style="@style/input"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="text" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="@dimen/hr_margin"
                    android:layout_marginVertical="@dimen/vr_margin"
                    android:text="@string/login"
                    app:icon="@drawable/ic_card_arrow"
                    app:iconGravity="textEnd" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>